[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/resource_spot/resource_spot.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.97826, 4.32016 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.2941, 32.1644 )

[node name="ResourceSpot" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CollectTriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectTriggerArea"]
shape = SubResource( 1 )

[node name="OccupiedSpaceArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="OccupiedSpaceArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="CollectTriggerArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="CollectTriggerArea" to="." method="_on_body_exited"]
[connection signal="area_entered" from="OccupiedSpaceArea" to="." method="_on_occupied_space_collided"]
